--- a/pre/package.json
+++ b/pre/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./server.js"
+    "start": "webpack-dev-server",
+   "express": "node ./server.js"
   },
   "dependencies": {
     "express": "~4.9.0",
@@ -13,5 +14,13 @@
     "serve-favicon": "~2.1.3",
     "debug": "~2.0.0",
     "jade": "~1.6.0"
+  },
+   "devDependencies": {
+    "angular": "^1.3.0",
+    "babel-core": "^6.24.1",
+    "babel-loader": "^6.4.1",
+    "babel-preset-es2015": "^6.24.1",
+    "raw-loader": "^0.5.1",
+    "webpack": "^2.4.1"
   }
 }
