--- a/routing/package.json
+++ b/routing/package.json
@@ -13,5 +13,14 @@
     "serve-favicon": "~2.1.3",
     "debug": "~2.0.0",
     "jade": "~1.6.0"
+  },
+   "devDependencies": {
+    "angular": "^1.3.0",
+    "angular-route": "^1.3.0",
+    "babel-core": "^6.24.1",
+    "babel-loader": "^6.4.1",
+    "babel-preset-es2015": "^6.24.1",
+    "raw-loader": "^0.5.1",
+    "webpack": "^2.4.1"
   }
 }
